아이디 이메일 유형 체크

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -90,7 +90,7 @@
 		            alert("Incorrect e-mail address. Please enter it again."); // 오류 메시지 표시
 		            $("#inpUsrId").focus();
 		            // TO-DO : 테스트 ID 사용 안할 시 주석해제
-		            //return;
+		            return;
 		        }
 				
 		     	// CSRF 토큰과 헤더 이름을 메타 태그에서 가져오기
