기말금액, Audit Trail 추가

--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -420,6 +420,9 @@
 					urls.push("/BIZFST001M0ExecuteList");
 					urls.push("/BIZFST002M0ExecuteList");
 				break;
+				case "B0006":
+					urls.push("/BIZADT001M0ExecuteList");
+				break;				
 			}
 			
 			urls.forEach((url)=>{
